Add participant attendance tracking and recording visibility features